--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
     "build-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-native-fontawesome": "^0.2.0",
-    "axios": "^0.19.1",
-    "qs": "^6.9.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
+    "axios": "^0.21.1",
+    "qs": "^6.9.6",
     "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react-native": "^0.63.4",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.5.2",
-    "react-native-reanimated": "^1.4.0",
-    "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-screens": "^2.16.1",
     "react-native-svg": "^9.13.6",
-    "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.10",
+    "react-native-vector-icons": "^6.7.0",
+    "react-navigation": "^4.4.3",
     "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
+    "metro-react-native-babel-preset": "^0.56.4",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
