--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.34",
         "@fortawesome/free-solid-svg-icons": "^5.15.2",
         "@fortawesome/react-native-fontawesome": "^0.2.6",
+        "@react-native-community/async-storage": "^1.12.1",
         "@react-native-community/toolbar-android": "0.1.0-rc.2",
         "axios": "^0.21.1",
         "react": "16.9.0",
