--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@react-native-community/async-storage": "^1.12.1",
         "@react-native-community/toolbar-android": "0.1.0-rc.2",
         "axios": "^0.21.1",
+        "galio-framework": "^0.8.0",
         "react": "16.9.0",
         "react-native": "^0.64.1",
         "react-native-elements": "^1.2.7",
