--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-native": "^0.64.1",
         "react-native-elements": "^1.2.7",
         "react-native-gesture-handler": "^1.9.0",
+        "react-native-paper": "^4.9.2",
         "react-native-reanimated": "^1.13.2",
         "react-native-rsa-native": "^2.0.3",
         "react-native-screens": "^2.16.1",
