--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "react-native-vector-icons": "^6.7.0",
         "react-navigation": "^4.4.3",
         "react-navigation-stack": "^1.10.3",
-        "react-redux": "^7.2.4"
+        "react-redux": "^7.2.4",
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
