--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "foxtrot",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "private": true,
     "scripts": {
         "android": "react-native run-android",
@@ -14,29 +14,31 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.34",
         "@fortawesome/free-solid-svg-icons": "^5.15.2",
-        "@fortawesome/react-native-fontawesome": "^0.2.6",
+        "@fortawesome/react-native-fontawesome": "^0.2.7",
         "@react-native-community/async-storage": "^1.12.1",
         "@react-native-community/toolbar-android": "0.1.0-rc.2",
+        "@react-navigation/drawer": "^6.0.1",
+        "@react-navigation/native": "^6.0.1",
+        "@react-navigation/stack": "^6.0.1",
         "axios": "^0.21.1",
         "galio-framework": "^0.8.0",
         "react": "16.9.0",
-        "react-native": "^0.64.1",
+        "react-native": "^0.64.2",
         "react-native-elements": "^1.2.7",
-        "react-native-gesture-handler": "^1.9.0",
+        "react-native-gesture-handler": "^1.10.3",
         "react-native-paper": "^4.9.2",
-        "react-native-reanimated": "^1.13.2",
+        "react-native-reanimated": "^1.13.3",
         "react-native-rsa-native": "^2.0.3",
-        "react-native-screens": "^2.16.1",
+        "react-native-safe-area-context": "^3.2.0",
+        "react-native-screens": "^2.18.1",
         "react-native-svg": "^9.13.6",
         "react-native-vector-icons": "^6.7.0",
-        "react-navigation": "^4.4.3",
-        "react-navigation-stack": "^1.10.3",
         "react-redux": "^7.2.4",
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.10",
-        "@babel/runtime": "^7.12.5",
+        "@babel/core": "^7.14.8",
+        "@babel/runtime": "^7.14.8",
         "@react-native-community/eslint-config": "^0.0.5",
         "babel-jest": "^26.6.3",
         "eslint": "^6.5.1",
