--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
         "@react-navigation/drawer": "^6.0.1",
         "@react-navigation/native": "^6.0.1",
         "@react-navigation/stack": "^6.0.1",
-        "axios": "^0.21.1",
+        "axios": "^0.21.4",
         "galio-framework": "^0.8.0",
         "react": "16.9.0",
         "react-native": "^0.64.2",
         "react-native-elements": "^1.2.7",
         "react-native-gesture-handler": "^1.10.3",
+        "react-native-notifications": "^4.1.3",
         "react-native-paper": "^4.9.2",
         "react-native-reanimated": "^1.13.3",
         "react-native-rsa-native": "^2.0.3",
