--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-native-elements": "^1.2.7",
         "react-native-gesture-handler": "^1.10.3",
         "react-native-paper": "^4.9.2",
+        "react-native-push-notification": "^8.1.1",
         "react-native-reanimated": "^1.13.3",
         "react-native-rsa-native": "^2.0.3",
         "react-native-safe-area-context": "^3.2.0",
