--- a/package.json
+++ b/package.json
@@ -14,38 +14,34 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.34",
         "@fortawesome/free-solid-svg-icons": "^5.15.2",
-        "@fortawesome/react-native-fontawesome": "^0.2.7",
-        "@react-native-community/async-storage": "^1.12.1",
-        "@react-native-community/toolbar-android": "0.1.0-rc.2",
-        "@react-navigation/drawer": "^6.0.1",
-        "@react-navigation/native": "^6.0.1",
-        "@react-navigation/stack": "^6.0.1",
+        "@fortawesome/react-native-fontawesome": "^0.3.0",
+        "@react-native-async-storage/async-storage": "^1.17.10",
+        "@react-native-community/toolbar-android": "^0.2.1",
+        "@react-navigation/drawer": "^6.4.4",
+        "@react-navigation/native": "^6.0.12",
+        "@react-navigation/stack": "^6.2.3",
         "axios": "^0.21.2",
         "galio-framework": "^0.8.0",
-        "react": "16.9.0",
+        "react": "^18.0.0",
         "react-native": "^0.69.3",
         "react-native-elements": "^1.2.7",
-        "react-native-gesture-handler": "^1.10.3",
-        "react-native-paper": "^4.9.2",
+        "react-native-gesture-handler": "^2.6.0",
+        "react-native-paper": "^4.12.4",
         "react-native-push-notification": "^8.1.1",
-        "react-native-reanimated": "^2.9.1",
         "react-native-rsa-native": "^2.0.3",
         "react-native-safe-area-context": "^3.2.0",
-        "react-native-screens": "^2.18.1",
+        "react-native-screens": "^3.17.0",
         "react-native-svg": "^12.4.3",
-        "react-native-vector-icons": "^6.7.0",
+        "react-native-vector-icons": "^9.2.0",
         "react-redux": "^7.2.4",
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.14.8",
         "@babel/runtime": "^7.14.8",
-        "@react-native-community/eslint-config": "^0.0.5",
-        "babel-jest": "^26.6.3",
-        "eslint": "^6.5.1",
-        "jest": "^26.6.3",
-        "metro-react-native-babel-preset": "^0.56.4",
-        "react-test-renderer": "16.9.0"
+        "@react-native-community/eslint-config": "^3.1.0",
+        "eslint": "^8.23.0",
+        "metro-react-native-babel-preset": "^0.56.4"
     },
     "jest": {
         "preset": "react-native"
