--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-native-gesture-handler": "^2.6.0",
         "react-native-paper": "^4.12.4",
         "react-native-push-notification": "^8.1.1",
+        "react-native-reanimated": "^2.9.1",
         "react-native-rsa-native": "^2.0.3",
         "react-native-safe-area-context": "^3.2.0",
         "react-native-screens": "^3.17.0",
@@ -41,7 +42,7 @@
         "@babel/runtime": "^7.14.8",
         "@react-native-community/eslint-config": "^3.1.0",
         "eslint": "^8.23.0",
-        "metro-react-native-babel-preset": "^0.56.4"
+        "metro-react-native-babel-preset": "^0.72.1"
     },
     "jest": {
         "preset": "react-native"
