--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
         "react-native-gesture-handler": "^2.6.0",
         "react-native-paper": "^4.12.4",
         "react-native-push-notification": "^8.1.1",
+        "react-native-randombytes": "^3.6.1",
         "react-native-reanimated": "^2.9.1",
         "react-native-rsa-native": "^2.0.5",
         "react-native-safe-area-context": "^3.1.9",
         "react-native-screens": "^3.17.0",
         "react-native-svg": "^13.1.0",
         "react-native-vector-icons": "^9.2.0",
+        "react-native-webview": "^11.23.0",
+        "react-native-webview-crypto": "^0.0.25",
         "react-redux": "^7.2.4",
         "redux-thunk": "^2.3.0"
     },
