--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
         "react-native-webview": "^11.23.0",
         "react-native-webview-crypto": "^0.0.25",
         "react-redux": "^7.2.4",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "expo": "^46.0.0",
+        "expo-local-authentication": "~12.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.14.8",
