--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,4 +23,4 @@ android.enableJetifier=true
 org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryError
 org.gradle.daemon=true
 org.gradle.parallel=true
-org.gradle.configureondemand=true
+# org.gradle.configureondemand=true
