--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,10 @@
-apply plugin: "com.android.application"
-
 import com.android.build.OutputFile
+
+plugins {
+    id 'com.android.application'
+    // Add the Google services Gradle plugin
+    id 'com.google.gms.google-services'
+}
 
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
@@ -177,6 +181,8 @@ android {
 
         }
     }
+
+    
 }
 
 dependencies {
@@ -190,6 +196,16 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:30.3.2')
+
+    // TODO: Add the dependencies for Firebase products you want to use
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+
+    // Add the dependencies for any other desired Firebase products
+    // https://firebase.google.com/docs/android/setup#available-libraries
 }
 
 // Run this once to be able to run the application with BUCK
