--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
         "@fortawesome/react-native-fontawesome": "^0.3.0",
         "@react-native-async-storage/async-storage": "^1.17.10",
         "@react-native-community/toolbar-android": "^0.2.1",
+        "@react-native-firebase/app": "^15.4.0",
+        "@react-native-firebase/messaging": "^15.4.0",
         "@react-navigation/drawer": "^6.4.4",
         "@react-navigation/native": "^6.0.12",
         "@react-navigation/stack": "^6.2.3",
         "axios": "^0.21.2",
+        "expo": "^46.0.0",
+        "expo-local-authentication": "~12.3.0",
         "react": "^18.0.0",
         "react-native": "^0.69.3",
         "react-native-elements": "^3.4.2",
@@ -39,9 +43,7 @@
         "react-native-webview": "^11.23.0",
         "react-native-webview-crypto": "^0.0.25",
         "react-redux": "^7.2.4",
-        "redux-thunk": "^2.3.0",
-        "expo": "^46.0.0",
-        "expo-local-authentication": "~12.3.0"
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.14.8",
