--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -200,9 +200,8 @@ dependencies {
     // TODO: Add the dependencies for Firebase products you want to use
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
-
-    // Add the dependencies for any other desired Firebase products
-    // https://firebase.google.com/docs/android/setup#available-libraries
+    
+    implementation project(':react-native-push-notification')
 }
 
 // Run this once to be able to run the application with BUCK
