--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('FOXTROT_UPLOAD_STORE_FILE')) {
+                storeFile file(FOXTROT_UPLOAD_STORE_FILE)
+                storePassword FOXTROT_UPLOAD_STORE_PASSWORD
+                keyAlias FOXTROT_UPLOAD_KEY_ALIAS
+                keyPassword FOXTROT_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -159,7 +167,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
