--- a/package.json
+++ b/package.json
@@ -49,9 +49,13 @@
         "@babel/core": "^7.14.8",
         "@babel/runtime": "^7.14.8",
         "@react-native-community/eslint-config": "^3.1.0",
+        "@tsconfig/react-native": "^2.0.2",
+        "@types/react": "^18.0.25",
+        "@types/react-native": "^0.70.6",
         "babel-plugin-root-import": "^6.6.0",
         "eslint": "^8.23.0",
-        "metro-react-native-babel-preset": "^0.72.1"
+        "metro-react-native-babel-preset": "^0.72.1",
+        "typescript": "^4.8.4"
     },
     "jest": {
         "preset": "react-native"
