--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,16 @@
 {
-    "extends": "@tsconfig/react-native/tsconfig.json"
+    "extends": "@tsconfig/react-native/tsconfig.json",
+    "compilerOptions": {
+        "target": "es6",
+        "baseUrl": ".",
+        "paths": {
+          "~/*": ["src/*"]
+        },
+        "types": ["react-native"],
+        "lib": [
+            "es2019",
+            "dom"
+        ]
+      },
+      "exclude": ["node_modules"]
 }
