Migrated to ECDH keypair for users. Fixed crypto getrandom func. Typescript fixes

--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
         "@react-navigation/stack": "^6.2.3",
         "@types/react-redux": "^7.1.24",
         "axios": "^0.21.2",
-        "expo": "^46.0.0",
+        "expo": "^46.0.17",
         "expo-local-authentication": "~12.3.0",
         "react": "^18.0.0",
         "react-native": "^0.69.3",
         "react-native-elements": "^3.4.2",
         "react-native-gesture-handler": "^2.6.0",
+        "react-native-get-random-values": "^1.8.0",
         "react-native-keychain": "^8.1.1",
         "react-native-paper": "^4.12.4",
         "react-native-push-notification": "^8.1.1",
