--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,8 +132,8 @@ android {
         applicationId "com.francescogorini.foxtrot"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
     }
     splits {
@@ -160,6 +160,11 @@ android {
             }
         }
     }
+    // Needed for some reason for assembleRelease
+    lintOptions {
+        disable "Instantiatable"
+    }
+
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
