--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "foxtrot",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "private": true,
     "scripts": {
         "android": "react-native run-android",
@@ -41,6 +41,7 @@
         "react-native-safe-area-context": "^3.1.9",
         "react-native-screens": "^3.17.0",
         "react-native-svg": "^13.1.0",
+        "react-native-toast-message": "^2.1.5",
         "react-native-vector-icons": "^9.2.0",
         "react-native-webview": "^11.23.0",
         "react-native-webview-crypto": "^0.0.25",
@@ -52,6 +53,7 @@
         "@babel/runtime": "^7.14.8",
         "@react-native-community/eslint-config": "^3.1.0",
         "@tsconfig/react-native": "^2.0.2",
+        "@types/node": "^18.11.11",
         "@types/react": "^18.0.25",
         "@types/react-native": "^0.70.6",
         "babel-plugin-root-import": "^6.6.0",
