--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "foxtrot",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "private": true,
     "scripts": {
         "android": "react-native run-android",
@@ -30,6 +30,7 @@
         "react": "^18.0.0",
         "react-native": "^0.69.3",
         "react-native-elements": "^3.4.2",
+        "react-native-fs": "^2.20.0",
         "react-native-gesture-handler": "^2.6.0",
         "react-native-get-random-values": "^1.8.0",
         "react-native-keychain": "^8.1.1",
