--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -215,6 +215,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     
     implementation project(':react-native-push-notification')
+
+    implementation project(':react-native-fs')
 }
 
 // Run this once to be able to run the application with BUCK
