--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -7,3 +7,6 @@ useExpoModules()
 
 include ':react-native-push-notification'
 project(':react-native-push-notification').projectDir = file('../node_modules/react-native-push-notification/android')
+
+include ':react-native-fs'
+project(':react-native-fs').projectDir = new File(settingsDir, '../node_modules/react-native-fs/android')
