--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "expo-local-authentication": "~12.3.0",
         "react": "^18.0.0",
         "react-native": "^0.69.3",
+        "react-native-document-picker": "^8.1.3",
         "react-native-elements": "^3.4.2",
         "react-native-fs": "^2.20.0",
         "react-native-gesture-handler": "^2.6.0",
