--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "react-native-svg": "^13.1.0",
         "react-native-toast-message": "^2.1.5",
         "react-native-vector-icons": "^9.2.0",
+        "react-native-webrtc": "^106.0.1",
         "react-native-webview": "^11.23.0",
         "react-native-webview-crypto": "^0.0.25",
         "react-redux": "^7.2.4",
