--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "@types/node": "^18.11.18",
         "@types/react": "^18.0.26",
         "@types/react-native": "^0.70.8",
+        "@types/react-native-push-notification": "^8.1.1",
         "babel-plugin-root-import": "^6.6.0",
         "eslint": "^8.23.1",
         "metro-react-native-babel-preset": "^0.72.3",
