--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@react-navigation/drawer": "^6.4.4",
         "@react-navigation/native": "^6.0.16",
         "@react-navigation/stack": "^6.2.3",
+        "@types/react-native-webrtc": "^1.75.5",
         "@types/react-redux": "^7.1.25",
         "axios": "^0.21.4",
         "buffer": "^6.0.3",
