--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-native-fs": "^2.20.0",
         "react-native-gesture-handler": "^2.6.2",
         "react-native-get-random-values": "^1.8.0",
+        "react-native-incall-manager": "^4.0.1",
         "react-native-keychain": "^8.1.1",
         "react-native-paper": "^4.12.5",
         "react-native-push-notification": "^8.1.1",
@@ -62,6 +63,7 @@
         "@types/node": "^18.11.18",
         "@types/react": "^18.0.26",
         "@types/react-native": "^0.70.8",
+        "@types/react-native-incall-manager": "^3.2.1",
         "@types/react-native-push-notification": "^8.1.1",
         "babel-plugin-root-import": "^6.6.0",
         "eslint": "^8.23.1",
