--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -60,6 +64,31 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+
+        <!-- Call Screen stuff -->
+        <activity android:name="com.reactnativefullscreennotificationincomingcall.IncomingCallActivity"
+          android:theme="@style/incomingCall"
+          android:launchMode="singleTask"
+          android:excludeFromRecents="true"
+          android:exported="true"
+          android:showWhenLocked="true"
+          android:turnScreenOn="true"
+        />
+        <activity android:name="com.reactnativefullscreennotificationincomingcall.NotificationReceiverActivity"
+          android:theme="@style/incomingCall"
+          android:launchMode="singleTask"
+          android:excludeFromRecents="true"
+          android:exported="true"
+          android:showWhenLocked="true"
+          android:turnScreenOn="true"
+        />
+        <service
+          android:name="com.reactnativefullscreennotificationincomingcall.IncomingCallService"
+          android:enabled="true"
+          android:stopWithTask="false"
+          android:exported="true" 
+        />
 
     </application>
 
