--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-native-document-picker": "^8.1.3",
         "react-native-elements": "^3.4.3",
         "react-native-fs": "^2.20.0",
+        "react-native-full-screen-notification-incoming-call": "^0.1.8",
         "react-native-gesture-handler": "^2.6.2",
         "react-native-get-random-values": "^1.8.0",
         "react-native-incall-manager": "^4.0.1",
