--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,13 @@ buildscript {
         compileSdkVersion = 31
         targetSdkVersion = 31
 
-        ndkVersion = "21.4.7075529"
+        if (System.properties['os.arch'] == "aarch64") {
+            // For M1 Users we need to use the NDK 24 which added support for aarch64
+            ndkVersion = "24.0.8215888"
+        } else {
+            // Otherwise we default to the side-by-side NDK version from AGP.
+            ndkVersion = "21.4.7075529"
+        }
     }
     repositories {
         google()  // Google's Maven repository
@@ -16,11 +22,10 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:7.2.1")
-        // classpath("com.facebook.react:react-native-gradle-plugin")
-        // classpath("de.undercouch:gradle-download-task:5.0.1")
+        classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath("de.undercouch:gradle-download-task:5.0.1")
 
-        classpath 'com.google.gms:google-services:+'
-        // classpath 'com.google.gms:google-services:4.3.13'
+        classpath('com.google.gms:google-services:+')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
