Viewing images in conversation page can now be zoomed/scrolled

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@likashefqet/react-native-image-zoom": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/toolbar-android": "^0.2.1",
