Removed useless files and tidy up proj structure

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["*"]
     }
   },
   "exclude": ["node_modules"]
