--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "react-native-image-picker": "^8.2.1",
         "react-native-incall-manager": "^4.2.1",
         "react-native-keychain": "~10.0.0",
-        "react-native-nitro-modules": "~0.31.10",
+        "react-native-mmkv": "^4.1.2",
+        "react-native-nitro-modules": "^0.32.1",
         "react-native-nitro-sound": "~0.2.10",
         "react-native-paper": "^5.14.5",
         "react-native-push-notification": "^8.1.1",
